# wordUP

./: .gitignore  COMPARISON.md  CREDITS.md  Cargo.toml  LICENSE  QUICKSTART.md  README.md  build.bat  build.sh  word_up.py
src/: lib.rs  main.rs  markov.rs  stats.rs  subdomain.rs  word_extraction.rs  word_processing.rs
